.config/relics/rote/tests/snapshots/wording__help-root.snap
---
source: rote/tests/wording.rs
expression: help
---
Spaced-repetition drill for the passwords you must hold in your head.

Called bare, rote asks for whatever the schedule wants today. If nothing is due it offers to drill everything anyway, on one keystroke. It keeps a faithful record and proposes a schedule; it renders no verdict, so what the numbers mean is yours to decide.

The secret is held in no recoverable form. rote can say wrong; it can never say what the right answer was.

Usage: rote [OPTIONS] [COMMAND]

Commands:
  status       Show the schedule, the rung and what this machine holds [alias: due]
  stats        Show retention, the streak, recall latency and every fail, per engram
  log          Show recent records
  machines     Every machine that has written to the corpus, and this one
  drill        Drill named lineages, due or not. Every active lineage when none is named
  enroll       Enroll a lineage. The secret is typed twice and kept only as a verifier
  attach       Make a verifier here for an engram this machine is dormant on. Nothing is verified: rote takes your word that the secret is unchanged
  rotate       Supersede a lineage's engram with a new secret, typed twice. Its ladder starts over
  retire       Take a lineage off the schedule. Its history stays; its verifiers do not
  doctor       Report the state of the drill, for assay and for coop
  banner       One line for the shell, or nothing. Reads the record and never writes
  help         Reference: flags, records, exit codes
  guide        Doctrine: what this is for, and why it is shaped this way
  completions  Shell completions

Options:
      --format <FORMAT>
          Defaults to agent under Claude Code or off a terminal, human otherwise

          Possible values:
          - human: Tables, colour, alignment. What a person reads
          - agent: Terse, stable field order, no decoration. What a model reads
          - json:  Machine-readable. What a script reads

      --json
          Shorthand for --format json

      --color <COLOR>
          Honours `NO_COLOR` and `CLICOLOR_FORCE`

          Possible values:
          - auto:   Honour the environment: `NO_COLOR`, `CLICOLOR_FORCE`, `TERM`, tty-ness
          - always: Always
          - never:  Never
          
          [default: auto]

  -q, --quiet
          Print only what was asked for

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version

rote guide ladder|irregularity|custody = doctrine
rote help keys|intervals|records|files|machines|stdin|exit = reference topics
