.config/relics/rote/tests/snapshots/wording__intake-again.snap
---
source: rote/tests/wording.rs
expression: "intake(rote::intake::AGAIN, None, &Field::empty(Reveal::Masked))"
---
╭─ enroll ──────────────────────────────────────────────────── Sun 13 Sep ─╮
│                                                                          │
│   escrow-p                                                               │
│                                                                          │
│   again                                                                  │
│   ╭──────────────────────────────────────────────────────────────────╮   │
│   │                                                                  │   │
│   ╰──────────────────────────────────────────────────────────────────╯   │
│                                                                          │
│                                                               ^R  show   │
│                                                                          │
╰──────────────────────────────────────────────────────────────────────────╯
