.config/relics/rote/tests/snapshots/wording__intake-first.snap
---
source: rote/tests/wording.rs
expression: "intake(rote::intake::ENROLL_INTENTION, None, &Field::empty(Reveal::Masked))"
---
╭─ enroll ──────────────────────────────────────────────────── Sun 13 Sep ─╮
│                                                                          │
│   escrow-p                                                               │
│                                                                          │
│   the secret this lineage will hold, typed twice                         │
│   ╭──────────────────────────────────────────────────────────────────╮   │
│   │                                                                  │   │
│   ╰──────────────────────────────────────────────────────────────────╯   │
│                                                                          │
│                                                               ^R  show   │
│                                                                          │
╰──────────────────────────────────────────────────────────────────────────╯
