.config/relics/rote/tests/snapshots/wording__intake-revealed.snap
---
source: rote/tests/wording.rs
expression: "intake(rote::intake::ENROLL_INTENTION, None, &Field\n{\n    reveal: Reveal::Shown, drawn: shown, clipped: (false, false), column:\n    shown.chars().count(),\n},)"
---
╭─ enroll ──────────────────────────────────────────────────── Sun 13 Sep ─╮
│                                                                          │
│   escrow-p                                                               │
│                                                                          │
│   the secret this lineage will hold, typed twice                         │
│   ╭──────────────────────────────────────────────────────────────────╮   │
│   │ correct horse battery staple                                     │   │
│   ╰──────────────────────────────────────────────────────────────────╯   │
│                                                                          │
│                                                               ^R  hide   │
│                                                                          │
╰──────────────────────────────────────────────────────────────────────────╯
